issue #100, #93